# idl-parser

./: Cargo.toml
.github/workflows/: rust.yml
src/: grammar.pest  lib.rs  main.rs
