[package]
name = "idl-parser"
version = "0.1.0"
edition = "2021"
description = "A parser to parse Method URL Data -> Data
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
pest = { version="2.7.2" }
pest_derive = "2.7.2"
thiserror = "1.0.44"
